--- a/scss/blocks/_site-primary-link.scss
+++ b/scss/blocks/_site-primary-link.scss
@@ -9,6 +9,10 @@
   background-image: linear-gradient(102.04deg, #8fcdff 9.18%, #2d8ae3 87.1%);
   box-shadow: 0px 4px 41px #dbeeff;
   border-radius: 47px;
+
+  &:hover {
+    opacity: 0.8;
+  }
 }
 
 .site-primary-link--middle {
