--- a/scss/blocks/_demo-sites.scss
+++ b/scss/blocks/_demo-sites.scss
@@ -22,6 +22,7 @@
 .demo-sites__carousel-wrapper {
   position: relative;
   margin-top: 43px;
+  overflow: hidden;
 }
 
 .demo-sites__carousel-btn {
