--- a/scss/blocks/_partners.scss
+++ b/scss/blocks/_partners.scss
@@ -49,6 +49,7 @@
 
 @include breakpoint-down(500px) {
   .partners__heading {
+    margin-bottom: 36px;
     font-size: 32px;
     line-height: 39px;
   }
